--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="DefaultActivity"></activity>
+        <activity
+            android:name="DefaultActivity"
+            android:theme="@style/Theme.Error.NoActionBar" />
     </application>
 
 </manifest>
